# pharmmodel_class

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md
examples/: Diabetes Prediction.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  test.csv  test_2.csv  test_2_profile_report.html
src/pharmmod/: __init__.py  pharmmod.py
